chore: sync latest project updates